--- a/imports/ui/pages/stream.html
+++ b/imports/ui/pages/stream.html
@@ -1,6 +1,7 @@
 <template name="stream">
     {{> navigation}}
     {{> editor}}
+    {{> fullpagecal}}
     <div class="container main">
         <div class="col-lg-12 content">
             <div class="button-group filter-button-group mb-30">
