--- a/imports/ui/pages/calendar.html
+++ b/imports/ui/pages/calendar.html
@@ -1,11 +1,15 @@
 <template name="calendar">
-    {{> editor}}
-    {{> fullpagecal}}
+        <div class="cal-back" tabindex="0">
+            <i class="material-icons" id="returnHome">arrow_back</i>
+        </div>
+    <div class="container-fluid">
+        <div class="calendar"></div>
+    </div>
 </template>
 
 <template name="fullpagecal">
     <div class="cal-back" tabindex="0">
-        <i class="material-icons" id="openCal">perm_contact_calendar</i>
+        <i class="material-icons" id="openCal" hidden>perm_contact_calendar</i>
         <i class="material-icons" id="closeCal">arrow_back</i>
     </div>
     <div class="container-fluid calendar-body">
