--- a/imports/ui/pages/experimental.html
+++ b/imports/ui/pages/experimental.html
@@ -177,7 +177,13 @@
                                 <input type="text" class="ticket-info">
                             </div>
                         </div>
-                        <a href="" class="add-new-ticket">+ Add another Ticket Type</a>
+                        <a href="" class="add-new-ticket mr-30">+ Add another Ticket Type</a>
+                        <a href="" class="add-ticket-variant" hidden>+ Add a Ticket Variant</a>
+                        <div class="form-item mt-25 center-input ticket-variant-container">
+                            <select class="smaller" id="ticketVariant">
+                                <option value="" data-cost=""></option>
+                            </select>
+                        </div>
                         <hr>
                         <div class="ticket-info">
                             <h4>Additional Information</h4>
